@@ -2811,6 +2811,12 @@
                description="[DATE_OF_RENEWAL]"
                validate="true"
                required="true"/>
+        <field name="registrar"
+               type="checkbox"
+               description="[CONTACT_REGISTRAR_TO_RENEW]"
+               default_value="true"
+               validate="true"
+               required="false"/>
         <field name="continue"
                type="submit"
                description="[RENEW]"
