@@ -90,6 +90,7 @@
     <phrase id="CONTACT_EMAIL">Contact E-Mail</phrase>
     <phrase id="CONTACT_INFORMATION">Contact Information</phrase>
     <phrase id="CONTACT_NAME">Contact Name</phrase>
+    <phrase id="CONTACT_REGISTRAR_TO_RENEW">Contact the Registrar to renew this domain</phrase>
     <phrase id="CONTINUE">Continue</phrase>
     <phrase id="COUNTRY">Country</phrase>
     <phrase id="CREATE_ACCOUNT">Create Account</phrase>
